# candlestick-vision-transformer-classifier

./: README.md  candlestick_prediction.py  pyproject.toml  todo.docx  uv.locl
checkpoints/: 0_model.pt  10_model.pt  15_model.pt  20_model.pt  25_model.pt  5_model.pt  final_model.pt
data/test_data/: labels.csv
data/test_data/hand_labelled_test/: hand_labelled_test_labels.csv
data/test_data/screengrabs/: sc_labels.csv
data/train_data/: labels.csv
data/train_data/hand_labelled_train/: hand_labelled_train_labels.csv
data/train_data/screengrabs/: sg_labels.csv
src/: data.py  model.py  test.py  train.py
src/10_06_2025_candlestick.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: annotator.py  candlesticks.py  createlabels.py  datageneration_screengrab.py  datageneration_writeimages.py
